# pptx-printer

./: .gitignore  LICENSE.md  pptx-print.py  pptx-printer.py  pyproject.toml  readme.md
